Update generated data, swagger, shipment status and endpoints + Trigger all workers when start server
