# backend/docs/swagger.json
@@ -2451,7 +2451,8 @@
             "required": [
                 "email",
                 "full_name",
-                "password"
+                "password",
+                "phone"
             ],
             "properties": {
                 "email": {
@@ -2647,10 +2648,6 @@
         "domain.UpdateProfileRequest": {
             "type": "object",
             "properties": {
-                "default_addr": {
-                    "type": "string",
-                    "maxLength": 500
-                },
                 "full_name": {
                     "type": "string",
                     "maxLength": 100,
